Fix for code blocks in editor wrapping

--- a/src/CapytaleEditor.css
+++ b/src/CapytaleEditor.css
@@ -33,6 +33,7 @@
 .editor {
   --add-paragraph-height: 16px;
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 100%;
 }
 
 .editor-inner *,
